<resources>
    <string name="app_name">Weedeo User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="agora_app_id">e9083a06af214c29a75562b62e1b1833</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token">006e9083a06af214c29a75562b62e1b1833IAAwfZxk+EIhFEtfKxeZoL/SHYQUhoH+azaufG4E53xqNQrCxmsAAAAAEADeS2oOqKzDXQEAAQCorMNd</string>

    <string name="menu_shop_listing">Shop Listing</string>
    <string name="menu_change_number">Change Number</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_return_products">Return Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Ready to experience the next generation\nonline shopping</string>

    <string name="slider_1_title">Discover Next Generation\nOnline Shopping</string>
    <string name="slider_2_title">Hassle Free Payment\nMethods</string>
    <string name="login_button_text">Log in</string>
    <string name="location_button_text">Set Location</string>
    <string name="have_account_text">Have an account ?</string>

    <string name="rationale_location_message">This app needs access to your location to know where you are.</string>
    <string name="rationale_call_message">This app needs access to your camera and microphone to do video call.</string>
    <string name="title_activity_maps">Map</string>

    <string name="style_square">square_box</string>
    <string name="style_rounded">rounded_box</string>
    <string name="style_underline">underline</string>
    <string name="style_rounded_underline">rounded_underline</string>


    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="select_location">Select Location</string>
    <string name="loading">Loading…</string>
    <string name="change">Change</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="something_went_wrong_text">Something went wrong. Please try again later!!!!</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="login_text">Login</string>
    <string name="verify_otp_text">Verify OTP</string>
    <string name="enter_number_text">Enter Your Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="otp_message_text">We have send you an 6 digit OTP code\nvia SMS for verification</string>
    <string name="enter_code_text">Enter code here</string>
    <string name="otp_not_receive_text">Didn\'t receive code?</string>
    <string name="resent_otp_text">Resend now</string>
    <string name="confirm_otp_text">Confirm OTP</string>
    <string name="login_number_hint"><font size="10">10 digit mobile number</font></string>
    <string name="otp_send_sucessfully_text">OTP send successfully</string>
    <string name="invalid_number_text">Invalid number</string>
    <string name="invalid_otp_text">Invalid OTP</string>
    <string name="logout_successfully_text">Successfully logged out</string>
    <string name="title_profile">Profile</string>
    <string name="full_name_text">Full Name</string>
    <string name="gender_text">Gender</string>
    <string name="gender_male_text">Male</string>
    <string name="gender_female_text">Female</string>
    <string name="gender_other_text">Other</string>
    <string name="date_text">Date Of Birth</string>
    <string name="email_text">Email</string>

    <string name="hint"><font size="12">Hint!</font></string>
    <string name="add_new_text">Add New</string>
    <string name="pin_code_text">Pin Code *</string>
    <string name="mobile_number_text">Mobile Number *</string>
    <string name="address_line_1_text">House Number, Building Name *</string>
    <string name="address_line_2_text">Road Name, Area, Colony *</string>
    <string name="city_hint_text">City *</string>
    <string name="state_hint_text">State *</string>
    <string name="landmark_hint_text">Landmark (Optional)</string>
    <string name="secondary_number_hint_text">Alternative Phone Number (Optional)</string>
    <string name="save_text">Save</string>
    <string name="address_title">Address</string>
    <string name="add_address_title">Add Address</string>
    <string name="select_state_text">Select State</string>
    <string name="select_city_text">Select City</string>
    <string name="search_text">Search</string>
    <string name="select_city_first_text">Select a city before proceed</string>
    <string name="no_search_result_available">No Result\'s Found</string>
    <string name="name_text">Name *</string>
    <string name="primary_text">Set as delivery address</string>
    <string name="mobile_text">Mobile</string>
    <string name="logout_text">Log out</string>
    <string name="address_text">Address</string>
    <string name="add_address_text">Add Address</string>
    <string name="view_all_address_text">View All Address</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="wrong_number_format_text">Please enter a valid 10 digit number</string>
    <string name="countryCode">+91\u0020</string>
    <string name="mismatch_otp_text">Please enter a valid 6 digit OTP</string>
    <string name="manage_address_text">Manage Address</string>
    <string name="update_successfully">Updated Successfully</string>
    <string name="location_search_hint_text">Search for area, street name...</string>
    <string name="set_location_text">Set Your Location</string>
    <string name="edit_address_title">Edit Address</string>
    <string name="current_location_gps_text">Current Location Using GPS</string>
    <string name="guest_user_name">Hi User</string>
    <string name="delete_address_title">Delete Address</string>
    <string name="delete_address_message">Are you sure you want to delete this address?</string>
    <string name="profile_update_title">Profile</string>
    <string name="profile_update_message">Do you want to save the changes you have made?</string>
    <string name="media_selection_title_text">Set profile photo</string>
    <string name="camera_text">Camera</string>
    <string name="camera_detail_text">Take a beautiful Picture</string>
    <string name="gallery_text">Gallery</string>
    <string name="gallery_detail_text">Choose an existing photo</string>
    <string name="message_added_successfully_text">Address added successfully.</string>
    <string name="invalid_email_text">Invalid email</string>
    <string name="ringing_one_dot">Ringing.</string>
    <string name="ringing_two_dot">Ringing..</string>
    <string name="ringing_three_dot">Ringing...</string>
    <string name="tap_to_visible_text">Tap to visible</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="title_home">Weedeo</string>
    <string name="buy_text">Buy</string>
    <string name="auto_verification_text">Auto verification completed</string>
    <string name="edit_text">Edit</string>
    <string name="change_number_text">Change Number</string>
    <string name="number_already_used_text">This number is already used</string>
    <string name="filter_text">Filter</string>
    <string name="nav_home_text">HOME</string>
    <string name="nav_search_text">SEARCH</string>
    <string name="nav_cart_text">CART</string>
    <string name="nav_profile_text">MY ACCOUNT</string>
    <string name="nav_share_text">SHARE</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="cart_text">Cart</string>
    <string name="action_search_hint">What are you looking for?</string>
    <string name="connecting_text">Connecting...</string>
    <string name="search_by_category_text">Search By Category</string>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>
