<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_marginStart="@dimen/dimen_20dp"
    android:layout_marginEnd="@dimen/dimen_20dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:padding="@dimen/dimen_5dp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/dimen_10dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:srcCompat="@drawable/ic_close_grey_24dp"
            tools:ignore="ExtraText">

        </androidx.appcompat.widget.AppCompatImageView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:visibility="visible"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/content_text_size"
            android:text="@string/enter_number_text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_20dp">
        <com.weedeo.user.Utils.PrefixEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/dimen_18sp"
            android:hint="@string/login_number_hint"
            android:tag="@string/countryCode"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:background="@drawable/location_button_corner_radius"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/continue_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otpLayout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_otp_verify"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:textColor="@color/text_color"
            android:text="@string/otp_message_text"
            android:textSize="@dimen/content_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_code_text"
                android:textSize="@dimen/content_text_size"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:fontFamily="@font/opensans_regular"
                android:padding="@dimen/dimen_5dp"
                android:textColor="@color/text_color"
                android:layout_alignParentStart="true"/>


        </RelativeLayout>

        <com.chaos.view.PinView
            android:id="@+id/otpBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_22sp"
            android:inputType="number"
            app:itemCount="6"
            android:focusable="true"
            android:textColor="@color/black"
            app:lineColor="@color/dark_gray"
            app:itemRadius="4dp"
            app:itemBackground="@color/dark_gray">
        </com.chaos.view.PinView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp">

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/timerOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="00.00"
            android:textSize="@dimen/content_text_size"
            android:padding="@dimen/dimen_5dp"
            android:textColor="@color/Red"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:id="@+id/resentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/otp_not_receive_text"
                android:textSize="@dimen/content_text_size" />

            <TextView
                android:id="@+id/resentOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/resent_otp_text"
                android:textSize="@dimen/content_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/confirmOtpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/confirm_otp_text"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:textColor="@color/white"
            android:background="@drawable/location_button_corner_radius"
            />

    </LinearLayout>



</LinearLayout>