<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/media_dialog_bg"
    android:layout_marginStart="@dimen/dimen_25dp"
    android:layout_marginEnd="@dimen/dimen_25dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/media_selection_title_text"
            android:textColor="@color/text_selection_color"
            android:textSize="@dimen/content_text_size"
            android:padding="@dimen/dimen_15dp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/dimen_10dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:srcCompat="@drawable/ic_close_grey_24dp"
            tools:ignore="ExtraText">

        </androidx.appcompat.widget.AppCompatImageView>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/line_separation_color">
    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_20dp">

        <LinearLayout
            android:id="@+id/cameraSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_5dp"
                android:padding="@dimen/dimen_10dp"
                android:src="@drawable/ic_menu_camera"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/opensans_bold"
                    android:textColor="@color/text_selection_color"
                    android:text="@string/camera_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/camera_detail_text"/>



            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/line_separation_color">
        </View>

        <LinearLayout
            android:id="@+id/gallerySelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_5dp"
                android:padding="@dimen/dimen_10dp"
                android:src="@drawable/ic_menu_gallery"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/opensans_bold"
                    android:textColor="@color/text_selection_color"
                    android:text="@string/gallery_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/gallery_detail_text"/>



            </LinearLayout>



        </LinearLayout>




    </LinearLayout>


    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:textSize="@dimen/dimen_16sp"
        android:fontFamily="@font/opensans_bold"
        android:text="Select Image From"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/cameraSelector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_menu_camera"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/opensans_bold"
                android:text="Camera"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gallerySelector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_menu_gallery"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/opensans_bold"
                android:text="Gallery"/>

    </LinearLayout>


    </LinearLayout>-->

</LinearLayout>